--- a/Movies.html
+++ b/Movies.html
@@ -8,7 +8,7 @@
 		<nav>
 			<h1>*JUMAEV NURIDDIN*</h1>
 			<ul id="nav">
-				<li><a class="homewhite" href="file:///C:/Users/Sirojiddin/Documents/MySite/index.html#">HOME</a></li>
+				<li><a class="homewhite" href="index.html">HOME</a></li>
 				<li><a class="homeblue" href="Movies.html">MOVIES</a></li>
 				</ul>
 		</nav>
