--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		    <div class="inner-content"><font class="fortext"><br><br><br>Personal Information<br><br>
 		    	Full name: Jumaev Nuriddin<br>
 		    	Id Number: u1710144<br>
+			Group: SOCIE17-15<br>    
 		        mail:     n.jumaev@student.inha.uz<br>
 		        web-site:  nuriddin98.github.io<br>
 		           </font>
